@@ -40,13 +40,11 @@ ClkTmpScrFile="$TmpDir""scraaafk-clicker.png"
 ##
 
 SpawnLogFile="$LogDir""mobs_spawn.log"  # Only for messages about spawntime. Not for debug.
-
 SptTmpScrFile="$TmpDir""aaafk_spawn.png"
-SptTmpBWScrFile1="$TmpDir""aaafk_spawn_bw1.png"
-SptTmpBWScrFile2="$TmpDir""aaafk_spawn_bw2.png"
-SptTmpScrFile1="$TmpDir""aaafk_spawn_tmp1.png" # Remove later. See the line 64 in spawn-tracker.sh
-SptTmpScrFile2="$TmpDir""aaafk_spawn_tmp2.png" # Remove later. See the line 81 in spawn-tracker.sh
-SptTmpOCRfile="$TmpDir""aaafk_spawn_ocr.txt"
+
+# How often takes a screenshots.
+SptSleeptime=10
+
 
 ##### Variables of run-clicker #################
 ##
